Primeros cambios index, tienda e imagenes

--- a/view/templates/index.html
+++ b/view/templates/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   
   <!-- Aquí enlazamos el CSS con la nueva maquetación y efectos -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
   <div class="tabs">
     <button class="tab active" data-tab="recientes">Recientes</button>
     <button class="tab" data-tab="bestofs">Best Of's</button>
-    <a href="tienda.html" class="tab">Tienda</a>
+    <a href="/tienda" class="tab">Tienda</a>
     <a href="amigos.html" class="tab">Amigos</a>
   </div>
 
@@ -43,19 +43,19 @@
       <h3>Canciones Recientes</h3>
       <div class="row">
         <a href="cancion.html?id=1" class="card">
-          <img src="assets/images/bohemian.jpeg" alt="Bohemian Rhapsody" class="card-img">
+          <img src="static/images/bohemian.jpeg" alt="Bohemian Rhapsody" class="card-img">
           <div class="card-caption">Bohemian Rhapsody</div>
         </a>
         <a href="cancion.html?id=2" class="card">
-          <img src="assets/images/lights.jpeg" alt="Blinding Lights" class="card-img">
+          <img src="static/images/lights.jpeg" alt="Blinding Lights" class="card-img">
           <div class="card-caption">Blinding Lights</div>
         </a>
         <a href="cancion.html?id=3" class="card">
-          <img src="assets/images/animals.jpeg" alt="Animals" class="card-img">
+          <img src="static/images/animals.jpeg" alt="Animals" class="card-img">
           <div class="card-caption">Animals</div>
         </a>
         <a href="cancion.html?id=4" class="card">
-          <img src="assets/images/five.jpeg" alt="Take Five" class="card-img">
+          <img src="static/images/five.jpeg" alt="Take Five" class="card-img">
           <div class="card-caption">Take Five</div>
         </a>
       </div>
@@ -64,19 +64,19 @@
       <h3>Álbumes Recientes</h3>
       <div class="row">
         <a href="album.html?id=1" class="card">
-          <img src="assets/images/opera.jpeg" alt="A Night at the Opera" class="card-img">
+          <img src="static/images/opera.jpeg" alt="A Night at the Opera" class="card-img">
           <div class="card-caption">A Night at the Opera</div>
         </a>
         <a href="album.html?id=6" class="card">
-          <img src="assets/images/futuro.jpeg" alt="Future Nostalgia" class="card-img">
+          <img src="static/images/futuro.jpeg" alt="Future Nostalgia" class="card-img">
           <div class="card-caption">Future Nostalgia</div>
         </a>
         <a href="album.html?id=17" class="card">
-          <img src="assets/images/discovery.jpeg" alt="Discovery" class="card-img">
+          <img src="static/images/discovery.jpeg" alt="Discovery" class="card-img">
           <div class="card-caption">Discovery</div>
         </a>
         <a href="album.html?id=18" class="card">
-          <img src="assets/images/blue.jpeg" alt="Kind of Blue" class="card-img">
+          <img src="static/images/blue.jpeg" alt="Kind of Blue" class="card-img">
           <div class="card-caption">Kind of Blue</div>
         </a>
       </div>
@@ -88,19 +88,19 @@
       <h3>Géneros Recientes</h3>
       <div class="row">
         <a href="generos especifico.html?id=rock" class="card">
-          <img src="assets/images/rock.jpeg" alt="Rock" class="card-img">
+          <img src="static/images/rock.jpeg" alt="Rock" class="card-img">
           <div class="card-caption">Rock</div>
         </a>
         <a href="generos especifico.html?id=pop" class="card">
-          <img src="assets/images/pop.jpeg" alt="Pop" class="card-img">
+          <img src="static/images/pop.jpeg" alt="Pop" class="card-img">
           <div class="card-caption">Pop</div>
         </a>
         <a href="generos especifico.html?id=electronica" class="card">
-          <img src="assets/images/electro.jpeg" alt="Electrónica" class="card-img">
+          <img src="static/images/electro.jpeg" alt="Electrónica" class="card-img">
           <div class="card-caption">Electrónica</div>
         </a>
         <a href="generos especifico.html?id=jazz" class="card">
-          <img src="assets/images/jazz.png" alt="Jazz" class="card-img">
+          <img src="static/images/jazz.png" alt="Jazz" class="card-img">
           <div class="card-caption">Jazz</div>
         </a>
       </div>
@@ -117,19 +117,19 @@
       <h3>Mejores Canciones</h3>
       <div class="row">
         <a href="cancion.html?id=9" class="card">
-          <img src="assets/images/heaven.jpeg" alt="Stairway to Heaven" class="card-img">
+          <img src="static/images/heaven.jpeg" alt="Stairway to Heaven" class="card-img">
           <div class="card-caption">Stairway to Heaven</div>
         </a>
         <a href="cancion.html?id=10" class="card">
-          <img src="assets/images/prayer.jpg" alt="Like a Prayer" class="card-img">
+          <img src="static/images/prayer.jpg" alt="Like a Prayer" class="card-img">
           <div class="card-caption">Like a Prayer</div>
         </a>
         <a href="cancion.html?id=11" class="card">
-          <img src="assets/images/more_time.jpg" alt="One More Time" class="card-img">
+          <img src="static/images/more_time.jpg" alt="One More Time" class="card-img">
           <div class="card-caption">One More Time</div>
         </a>
         <a href="cancion.html?id=12" class="card">
-          <img src="assets/images/so_what.jpg" alt="So What" class="card-img">
+          <img src="static/images/so_what.jpg" alt="So What" class="card-img">
           <div class="card-caption">So What</div>
         </a>
       </div>
@@ -141,19 +141,19 @@
       <h3>Mejores Álbumes</h3>
       <div class="row">
         <a href="album.html?id=19" class="card">
-          <img src="assets/images/led_IV.jpg" alt="Led Zeppelin IV" class="card-img">
+          <img src="static/images/led_IV.jpg" alt="Led Zeppelin IV" class="card-img">
           <div class="card-caption">Led Zeppelin IV</div>
         </a>
         <a href="album.html?id=20" class="card">
-          <img src="assets/images/thriller.jpeg" alt="Thriller" class="card-img">
+          <img src="static/images/thriller.jpeg" alt="Thriller" class="card-img">
           <div class="card-caption">Thriller</div>
         </a>
         <a href="album.html?id=21" class="card">
-          <img src="assets/images/ram.jpeg" alt="Random Access Memories" class="card-img">
+          <img src="static/images/ram.jpeg" alt="Random Access Memories" class="card-img">
           <div class="card-caption">Random Access Memories</div>
         </a>
         <a href="album.html?id=22" class="card">
-          <img src="assets/images/blue_train.jpg" alt="Blue Train" class="card-img">
+          <img src="static/images/blue_train.jpg" alt="Blue Train" class="card-img">
           <div class="card-caption">Blue Train</div>
         </a>
       </div>
@@ -163,19 +163,19 @@
       <h3>Mejores Géneros</h3>
       <div class="row">
         <a href="generos especifico.html?id=reggaeton" class="card">
-          <img src="assets/images/reggaeton.jpeg" alt="Reggaeton" class="card-img">
+          <img src="static/images/reggaeton.jpeg" alt="Reggaeton" class="card-img">
           <div class="card-caption">Reggaeton</div>
         </a>
         <a href="generos especifico.html?id=techno" class="card">
-          <img src="assets/images/techno.jpg" alt="Techno" class="card-img">
+          <img src="static/images/techno.jpg" alt="Techno" class="card-img">
           <div class="card-caption">Techno</div>
         </a>
         <a href="generos especifico.html?id=hiphop" class="card">
-          <img src="assets/images/hip_hop.jpg" alt="Hip Hop" class="card-img">
+          <img src="static/images/hip_hop.jpg" alt="Hip Hop" class="card-img">
           <div class="card-caption">Hip Hop</div>
         </a>
         <a href="generos especifico.html?id=salsa" class="card">
-          <img src="assets/images/salsa.jpg" alt="Salsa" class="card-img">
+          <img src="static/images/salsa.jpg" alt="Salsa" class="card-img">
           <div class="card-caption">Salsa</div>
         </a>
       </div>
@@ -204,7 +204,7 @@
   </script>
 
   <!-- Scripts -->
-  <script src="js/main.js"></script>
+  <script src="view/templates/main.js"></script>
   <script src="js/app.js"></script>
 
   <script>
