--- a/view/templates/index.html
+++ b/view/templates/index.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-  <!-- Inyección del header -->
+  <!-- Inyección del header 
   <div id="header-placeholder"></div>
   <script>
-    fetch('header.html')
+    fetch('/partials/header.html')
       .then(response => response.text())
       .then(data => {
         document.getElementById('header-placeholder').innerHTML = data;
@@ -25,6 +25,16 @@
           updateCartDropdown();
         }, 100);
       });
+  </script>
+  -->
+
+  {% include "header.html" %}
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      updateCartCount();
+      updateCartDropdown();
+    });
   </script>
 
   <!-- Menú de pestañas: Recientes, Best Of's, Tienda, Amigos -->
