--- a/view/templates/header.html
+++ b/view/templates/header.html
@@ -16,7 +16,7 @@
   </div>
   <div class="nav-right">
     <div class="cart-btn" id="cart-btn">
-      <img src="assets/images/carrito.png" alt="Carrito" id="cartIcon">
+      <img src="static/images/carrito.png" alt="Carrito" id="cartIcon">
       <!-- Nuevo contador -->
       <span id="cart-count" class="cart-count">0</span>
       <!-- Dropdown que se mostrará al pasar el ratón -->
