--- a/view/templates/tienda.html
+++ b/view/templates/tienda.html
@@ -23,14 +23,15 @@
       });
   </script> -->
 
-{% include "header.html" %}
+  {% include "header.html" %}
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      updateCartCount();
+      updateCartDropdown();
+    });
+  </script>
 
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    updateCartCount();
-    updateCartDropdown();
-  });
-</script>
+  
 
   <!-- Pestañas de la tienda -->
   <div class="store-tabs">
@@ -77,12 +78,15 @@
   </main>
 
   <!-- Botón de Ayuda Flotante -->
-  <a href="ayuda.html" class="help-button" title="Ayuda">?</a>
+  <a href="/ayuda" class="help-button" title="Ayuda">?</a>
 
-  <!-- Contenedor para insertar el footer dinámicamente -->
+
+
+
+  <!-- Contenedor para insertar el footer dinámicamente 
   <div id="footer"></div>
 
-  <!-- Script para cargar footer.html -->
+   Script para cargar footer.html 
   <script>
     // Esta función "fetch" trae el contenido de footer.html
     // y lo inyecta dentro del div con id="footer"
@@ -94,7 +98,11 @@
       .catch(error => {
         console.error('Error al cargar el footer:', error);
       });
-  </script>
+  </script>-->
+  {% include "footer.html" %}
+
+
+
 
   <!-- Carga del archivo JS con la funcionalidad -->
   <script src="js/app.js"></script>
