--- a/view/templates/header.html
+++ b/view/templates/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="nav-left">
-    <a href="index.html" class="logo" title="Inicio">UnderSounds</a>
+    <a href="/" class="logo" title="Inicio">UnderSounds</a>
   </div>
   <div class="nav-center">
     <a href="generos.html" id="btnGeneros" class="btn-icon" title="Buscar por géneros">💡</a>
