login, register y recover

--- a/view/templates/header.html
+++ b/view/templates/header.html
@@ -25,7 +25,7 @@
       </div>
     </div>    
     <!-- Botón de Iniciar Sesión -->
-    <a href="login.html" id="loginLink" class="login-btn" title="Iniciar sesión">Iniciar sesión</a>
+    <a href="/login" id="loginLink" class="login-btn" title="Iniciar sesión">Iniciar sesión</a>
   </div>
 </header>
 
