--- a/view/templates/footer.html
+++ b/view/templates/footer.html
@@ -18,18 +18,18 @@
     <div class="footer-right">
         <div class="social-buttons">
           <a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Instagram">
-            <img src="static/images//instagram.png" alt="Instagram" />
+            <img src="static/images/instagram.png" alt="Instagram" />
         </a>
         <a href="https://www.x.com" target="_blank" rel="noopener" aria-label="X">
-            <img src="static/images//x.png" alt="X" />
+            <img src="static/images/x.png" alt="X" />
         </a>
         <a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Facebook">
-            <img src="static/images//facebook.png" alt="Facebook" />
+            <img src="static/images/facebook.png" alt="Facebook" />
         </a>
         </div>
         <img
         class="flag-spain"
-        src="static/images//pais.webp"
+        src="static/images/pais.webp"
         alt="Bandera de España"
         />
     </div>
