--- a/view/templates/header.html
+++ b/view/templates/header.html
@@ -3,11 +3,11 @@
     <a href="/" class="logo" title="Inicio">UnderSounds</a>
   </div>
   <div class="nav-center">
-    <a href="generos.html" id="btnGeneros" class="btn-icon" title="Buscar por géneros">💡</a>
+    <a href="/generos" id="btnGeneros" class="btn-icon" title="Buscar por géneros">💡</a>
 
 
     <div class="search-container">
-      <form action="search.html" method="get">
+      <form action="/search" method="get">
         <input type="text" id="searchInput" name="q" placeholder="Buscar artista, álbum,...">
         <button type="submit" class="search-btn">🔍</button>
       </form>
