--- a/view/templates/index.html
+++ b/view/templates/index.html
@@ -44,7 +44,7 @@
     <button class="tab active" data-tab="recientes">Recientes</button>
     <button class="tab" data-tab="bestofs">Best Of's</button>
     <a href="/tienda" class="tab">Tienda</a>
-    <a href="amigos.html" class="tab">Amigos</a>
+    <a href="/amigos" class="tab">Amigos</a>
   </div>
 
   <!-- Sección: Recientes (visible por defecto) -->
@@ -54,19 +54,19 @@
       <!-- Canciones Recientes -->
       <h3>Canciones Recientes</h3>
       <div class="row">
-        <a href="cancion.html?id=1" class="card">
+        <a href="/cancion?id=1" class="card">
           <img src="static/images/bohemian.jpeg" alt="Bohemian Rhapsody" class="card-img">
           <div class="card-caption">Bohemian Rhapsody</div>
         </a>
-        <a href="cancion.html?id=2" class="card">
+        <a href="/cancion?id=2" class="card">
           <img src="static/images/lights.jpeg" alt="Blinding Lights" class="card-img">
           <div class="card-caption">Blinding Lights</div>
         </a>
-        <a href="cancion.html?id=3" class="card">
+        <a href="/cancion?id=3" class="card">
           <img src="static/images/animals.jpeg" alt="Animals" class="card-img">
           <div class="card-caption">Animals</div>
         </a>
-        <a href="cancion.html?id=4" class="card">
+        <a href="/cancion?id=4" class="card">
           <img src="static/images/five.jpeg" alt="Take Five" class="card-img">
           <div class="card-caption">Take Five</div>
         </a>
@@ -75,19 +75,19 @@
     <div class="album-section">
       <h3>Álbumes Recientes</h3>
       <div class="row">
-        <a href="album.html?id=1" class="card">
+        <a href="/album?id=1" class="card">
           <img src="static/images/opera.jpeg" alt="A Night at the Opera" class="card-img">
           <div class="card-caption">A Night at the Opera</div>
         </a>
-        <a href="album.html?id=6" class="card">
+        <a href="/album?id=6" class="card">
           <img src="static/images/futuro.jpeg" alt="Future Nostalgia" class="card-img">
           <div class="card-caption">Future Nostalgia</div>
         </a>
-        <a href="album.html?id=17" class="card">
+        <a href="/album?id=17" class="card">
           <img src="static/images/discovery.jpeg" alt="Discovery" class="card-img">
           <div class="card-caption">Discovery</div>
         </a>
-        <a href="album.html?id=18" class="card">
+        <a href="/album?id=18" class="card">
           <img src="static/images/blue.jpeg" alt="Kind of Blue" class="card-img">
           <div class="card-caption">Kind of Blue</div>
         </a>
@@ -99,19 +99,19 @@
     <div class="genres-section">
       <h3>Géneros Recientes</h3>
       <div class="row">
-        <a href="generos especifico.html?id=rock" class="card">
+        <a href="/generos_especifico?id=rock" class="card">
           <img src="static/images/rock.jpeg" alt="Rock" class="card-img">
           <div class="card-caption">Rock</div>
         </a>
-        <a href="generos especifico.html?id=pop" class="card">
+        <a href="/generos_especifico?id=pop" class="card">
           <img src="static/images/pop.jpeg" alt="Pop" class="card-img">
           <div class="card-caption">Pop</div>
         </a>
-        <a href="generos especifico.html?id=electronica" class="card">
+        <a href="/generos_especifico?id=electronica" class="card">
           <img src="static/images/electro.jpeg" alt="Electrónica" class="card-img">
           <div class="card-caption">Electrónica</div>
         </a>
-        <a href="generos especifico.html?id=jazz" class="card">
+        <a href="/generos_especifico?id=jazz" class="card">
           <img src="static/images/jazz.png" alt="Jazz" class="card-img">
           <div class="card-caption">Jazz</div>
         </a>
