--- a/view/templates/album.html
+++ b/view/templates/album.html
@@ -283,7 +283,7 @@
 
   
   
-    <script src="js/albumes.js"></script>
+    <script src="/static/js/albumes.js"></script>
   <script>
       document.addEventListener("DOMContentLoaded", () => {
         // Obtener el ID del álbum de la URL
@@ -378,8 +378,8 @@
   </script>
   
   <!-- Incluir el archivo album.js -->
-  <script src="js/album.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/app.js"></script>
+  <script src="/static/js/album.js"></script>
+  <script src="/static/js/main.js"></script>
+  <script src="/static/js/app.js"></script>
 </body>
 </html>
