--- a/view/templates/checkout.html
+++ b/view/templates/checkout.html
@@ -189,7 +189,7 @@
 
 
   <!-- Se incluye el script con la lógica del carrito -->
-  <script src="js/app.js"></script>
+  <script src="/static/js/app.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       // Renderizamos el carrito en el panel izquierdo
@@ -217,6 +217,6 @@
     });
   </script>
   <!-- Cargamos confirmar_pedido.js, que asigna el listener al submit del formulario -->
-  <script src="js/confirmar_pedido.js"></script>
+  <script src="/static/js/confirmar_pedido.js"></script>
 </body>
 </html>
