--- a/view/templates/mis_compras.html
+++ b/view/templates/mis_compras.html
@@ -112,7 +112,7 @@
 
   
 
-  <script src="js/app.js"></script>
+  <script src="/static/js/app.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       // Recupera los pedidos almacenados en localStorage
@@ -139,7 +139,7 @@
       }
     });
   </script>
-  <script src="js/confirmar_pedido.js"></script>
-  <script src="js/app.js"></script>
+  <script src="/static/js/confirmar_pedido.js"></script>
+  <script src="/static/js/app.js"></script>
 </body>
 </html>
