--- a/view/templates/producto.html
+++ b/view/templates/producto.html
@@ -104,11 +104,11 @@
   {% include "footer.html" %}
 
 
-
+ 
 
   
   <!-- Carga del archivo JS con la funcionalidad -->
-  <script src="js/app.js"></script>
+  <script src="/static/js/app.js"></script>
   <script>
     // Obtener el id del producto de la URL (?id=...)
     const params = new URLSearchParams(window.location.search);
