--- a/view/templates/search.html
+++ b/view/templates/search.html
@@ -112,11 +112,11 @@
 
 
   <!-- Carga de archivos JS con la información -->
-  <script src="js/artistas.js"></script>
-  <script src="js/sellos.js"></script>
-  <script src="js/albumes.js"></script>
-  <script src="js/canciones.js"></script>
-  <script src="js/amigos.js"></script>
+  <script src="/static/js/artistas.js"></script>
+  <script src="/static/js/sellos.js"></script>
+  <script src="/static/js/albumes.js"></script>
+  <script src="/static/js/canciones.js"></script>
+  <script src="/static/js/amigos.js"></script>
 
   <!-- Lógica del buscador -->
   <script>
@@ -188,7 +188,7 @@
     });
   </script>
 
-  <script src="js/main.js"></script>
-  <script src="js/app.js"></script>
+  <script src="/static/js/main.js"></script>
+  <script src="/static/js/app.js"></script>
 </body>
 </html>
