--- a/view/templates/amigos.html
+++ b/view/templates/amigos.html
@@ -182,7 +182,7 @@
     });
   </script>
 
-  <script src="js/main.js"></script>
-  <script src="js/app.js"></script>
+  <script src="/static/js/main.js"></script>
+  <script src="/static/js/app.js"></script>
 </body>
 </html>
