--- a/view/templates/ayuda.html
+++ b/view/templates/ayuda.html
@@ -169,8 +169,8 @@
   </main>
 
   <!-- Scripts -->
-  <script src="js/main.js"></script>
-  <script src="js/app.js"></script>
+  <script src="/static/js/main.js"></script>
+  <script src="/static/js/app.js"></script>
 
 
 
