--- a/view/templates/cancion.html
+++ b/view/templates/cancion.html
@@ -201,7 +201,7 @@
     }
   </script>
 
-  <script src="js/main.js"></script>
-  <script src="js/app.js"></script>
+  <script src="/static/js/main.js"></script>
+  <script src="/static/js/app.js"></script>
 </body>
 </html>
