--- a/view/templates/edit_perfil.html
+++ b/view/templates/edit_perfil.html
@@ -115,7 +115,7 @@
 
   
 
-  <script src="js/main.js"></script>
-  <script src="js/app.js"></script>
+  <script src="/static/js/main.js"></script>
+  <script src="/static/js/app.js"></script>
 </body>
 </html>
