--- a/view/templates/favoritos.html
+++ b/view/templates/favoritos.html
@@ -67,7 +67,7 @@
   
 
   <!-- Carga del archivo JS con la funcionalidad -->
-  <script src="js/app.js"></script>
+  <script src="/static/js/app.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       renderFavorites();
