--- a/view/templates/generos especifico.html
+++ b/view/templates/generos especifico.html
@@ -159,9 +159,9 @@
   
 
   <!-- Carga de scripts -->
-  <script src="js/generos.js"></script>
-  <script src="js/canciones.js"></script>
-  <script src="js/app.js"></script>
+  <script src="/static/js/generos.js"></script>
+  <script src="/static/js/canciones.js"></script>
+  <script src="/static/js/app.js"></script>
 </body>
 </html>
 
