--- a/view/templates/generos.html
+++ b/view/templates/generos.html
@@ -66,7 +66,7 @@
 
 
   <!-- Carga de scripts -->
-  <script src="js/generos.js"></script>
-  <script src="js/app.js"></script>
+  <script src="/static/js/generos.js"></script>
+  <script src="/static/js/app.js"></script>
 </body>
 </html>
