--- a/view/templates/index.html
+++ b/view/templates/index.html
@@ -222,8 +222,8 @@
 
 
   <!-- Scripts -->
-  <script src="view/templates/main.js"></script>
-  <script src="js/app.js"></script>
+  <script src="/static/js/main.js"></script>
+  <script src="/static/js/app.js"></script>
 
   <script>
 
