--- a/view/templates/resumen_compra.html
+++ b/view/templates/resumen_compra.html
@@ -102,7 +102,7 @@
 
   
 
-  <script src="js/main.js"></script>
-  <script src="js/app.js"></script>
+  <script src="/static/js/main.js"></script>
+  <script src="/static/js/app.js"></script>
 </body>
 </html>
