--- a/view/templates/sellos.html
+++ b/view/templates/sellos.html
@@ -211,10 +211,10 @@
   
 
   <!-- Incluir los archivos necesarios -->
-  <script src="js/albumes.js"></script>
-  <script src="js/artistas.js"></script>
-  <script src="js/sellos.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/app.js"></script>
+  <script src="/static/js/albumes.js"></script>
+  <script src="/static/js/artistas.js"></script>
+  <script src="/static/js/sellos.js"></script>
+  <script src="/static/js/main.js"></script>
+  <script src="/static/js/app.js"></script>
 </body>
 </html>
