--- a/view/templates/tienda.html
+++ b/view/templates/tienda.html
@@ -102,10 +102,10 @@
   {% include "footer.html" %}
 
 
-
+ 
 
   <!-- Carga del archivo JS con la funcionalidad -->
-  <script src="js/app.js"></script>
+  <script src="/static/js/app.js"></script>
   <!-- Script para gestionar las pestañas -->
   <script>
     document.addEventListener("DOMContentLoaded", function () {
