--- a/view/templates/generos especifico.html
+++ b/view/templates/generos especifico.html
@@ -74,7 +74,7 @@
 </head>
 <body>
 
-
+  
 
 
 
@@ -105,7 +105,6 @@
       updateCartDropdown();
     });
   </script>
-
 
 
 
@@ -154,7 +153,9 @@
   {% include "footer.html" %}
 
 
-
+  <div id="data-generos"
+       data-generos='{{ generos | tojson }}'>
+  </div>
 
   
 
