--- a/view/templates/tienda.html
+++ b/view/templates/tienda.html
@@ -101,7 +101,9 @@
   </script>-->
   {% include "footer.html" %}
 
-
+  <div id="data-productos"
+   data-productos='{{ productos | tojson }}'>
+  </div>
  
 
   <!-- Carga del archivo JS con la funcionalidad -->
